--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore .\source\SimpleRedirects.sln
+      run: dotnet restore ./source/SimpleRedirects.sln
     - name: Build
-      run: dotnet build .\source\SimpleRedirects.sln --configuration Release --no-restore
+      run: dotnet build ./source/SimpleRedirects.sln --configuration Release --no-restore
