--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,13 @@
 name: Build and Package
 
+env:
+  OUTPUT: ./Output
+  CONFIG: Release
+
 on:
   push:
-    branches: [ v9/main ]
+    tags:
+      - "release/*"
 
 jobs:
   build:
@@ -15,7 +20,18 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+    - name: Setup UmbPack
+      run: dotnet tool install Umbraco.Tools.Packages --global
     - name: Restore dependencies
       run: dotnet restore ./source/SimpleRedirects.sln
     - name: Build
-      run: dotnet build ./source/SimpleRedirects.sln --configuration Release --no-restore
+      run: dotnet build ./source/SimpleRedirects.sln --configuration ${{ env.CONFIG }} --no-restore
+    - name: Create NuGet package file for Core
+      run: dotnet pack ./source/SimpleRedirects.Core/SimpleRedirects.Core.csproj -c ${{ env.CONFIG }} --no-build --include-symbols -o ${{ env.OUTPUT }} /p:version=${{ steps.get_version.outputs.VERSION }}
+    - name: Create NuGet package file for Backoffice
+      run: dotnet pack ./source/SimpleRedirects/SimpleRedirects.csproj -c ${{ env.CONFIG }} --no-build --include-symbols -o ${{ env.OUTPUT }} /p:version=${{ steps.get_version.outputs.VERSION }}
+    - name: upload-artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: Build-Results-${{ steps.get_version.outputs.VERSION }}
+        path: ${{ env.OUTPUT }}/**/*
