--- a/source/SimpleRedirects.Site/appsettings.json
+++ b/source/SimpleRedirects.Site/appsettings.json
@@ -21,5 +21,9 @@
         "Id": "6479df9c-666d-4d18-8539-69a1ce00f855"
       }
     }
+  },
+  "SimpleRedirects": {
+    "CacheEnabled": true,
+    "CacheDuration": 86400
   }
 }
