--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ env:
 
 on:
   push:
-    branches: [ v9/main ]
+    tags:
+      - "release/*"
 
 jobs:
   build:
@@ -16,7 +17,7 @@ jobs:
     steps:
     - name: Get Version 
       id: get_version
-      run: echo ::set-output name=VERSION::2.0.0
+      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/release\//}
       shell: bash
       
     - uses: actions/checkout@v2  
@@ -39,8 +40,14 @@ jobs:
     - name: Create NuGet package file for Backoffice
       run: dotnet pack ./source/SimpleRedirects/SimpleRedirects.csproj -c ${{ env.CONFIG }} --no-build --include-symbols -o ${{ env.OUTPUT }} /p:version=${{ steps.get_version.outputs.VERSION }}
    
+    - name: Push packages to NuGet
+      run: dotnet nuget push ${{ env.OUTPUT }}/*.nupkg -k ${{ secrets.NUGET_DEPLOY_KEY } -s https://api.nuget.org/v3/index.json
+ 
     - name: Create Umbraco package file
       run: UmbPack pack ./source/package.xml -o ${{ env.OUTPUT }} -v ${{ steps.get_version.outputs.VERSION }}
+      
+#   - name: Push package to Our
+#     run: umbpack push ${{ env.OUTPUT }}/UmbracoPackage.1_${{ steps.get_version.outputs.VERSION }}.zip -k ${{ secrets.UMBRACO_DEPLOY_KEY }}      
     
     - name: upload-artifacts
       uses: actions/upload-artifact@v2
