--- a/source/SimpleRedirects/SimpleRedirects.csproj
+++ b/source/SimpleRedirects/SimpleRedirects.csproj
@@ -14,12 +14,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.0.0-beta001"/>
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="9.0.0-beta001"/>
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.0.0-rc001" />
+        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="9.0.0-rc001" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SimpleRedirects.Core\SimpleRedirects.Core.csproj"/>
+        <ProjectReference Include="..\SimpleRedirects.Core\SimpleRedirects.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
