--- a/source/SimpleRedirects.Site/SimpleRedirects.Site.csproj
+++ b/source/SimpleRedirects.Site/SimpleRedirects.Site.csproj
@@ -398,11 +398,11 @@
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.html" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.resource.js" />
     <Content Include="App_Plugins\SimpleRedirects\app.html" />
-    <Content Include="App_Plugins\SimpleRedirects\assets\lang\en.xml" />
     <Content Include="App_Plugins\SimpleRedirects\assets\scripts\app.js" />
     <Content Include="App_Plugins\SimpleRedirects\assets\scripts\vendors.min.js" />
     <Content Include="App_Plugins\SimpleRedirects\assets\styles\styles.min.css" />
     <Content Include="App_Plugins\SimpleRedirects\assets\styles\vendors.min.css" />
+    <Content Include="App_Plugins\SimpleRedirects\lang\en-US.xml" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
