Updated to latest version

--- a/source/SimpleRedirects.Site/appsettings.json
+++ b/source/SimpleRedirects.Site/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./umbraco/config/appsettings-schema.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -18,12 +19,8 @@
         "Debug": false
       },
       "Global": {
-        "Id": "6479df9c-666d-4d18-8539-69a1ce00f855"
+        "Id": "4d3183bb-a9d5-4f96-b2eb-8d875dcaa0c1"
       }
     }
-  },
-  "SimpleRedirects": {
-    "CacheEnabled": true,
-    "CacheDuration": 86400
   }
 }
