Allow for media redirects

--- a/source/SimpleRedirects.Site/appsettings.json
+++ b/source/SimpleRedirects.Site/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=|DataDirectory|\\Umbraco.sdf;Flush Interval=1;"
+    "umbracoDbDSN": "Data Source=(localdb)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\Umbraco.mdf;Integrated Security=True"
   },
   "Umbraco": {
     "CMS": {
@@ -21,5 +21,10 @@
         "Id": "4d3183bb-a9d5-4f96-b2eb-8d875dcaa0c1"
       }
     }
-  }
+  },
+  "SimpleRedirects": {
+    "CacheEnabled": true,
+    "CacheDuration": 86400, 
+    "OnlyRedirectOn404": false
+  } 
 }
