--- a/source/SimpleRedirects.Core/SimpleRedirects.Core.csproj
+++ b/source/SimpleRedirects.Core/SimpleRedirects.Core.csproj
@@ -13,7 +13,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/patrickdemooij9/SimpleRedirects/v9/main/package/simpleRedirectsLogo.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="10.0.0-rc4" />
-    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="10.0.0-rc4" />
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="10.0.0" />
+    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="10.0.0" />
   </ItemGroup>
 </Project>
