--- a/source/SimpleRedirects.Site/SimpleRedirects.Site.csproj
+++ b/source/SimpleRedirects.Site/SimpleRedirects.Site.csproj
@@ -4,7 +4,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc4" />
+        <PackageReference Include="Umbraco.Cms" Version="10.0.0" />
     </ItemGroup>
 
     <Import Project="..\SimpleRedirects\build\SimpleRedirects.targets" />
