--- a/source/SimpleRedirects.Site/appsettings.json
+++ b/source/SimpleRedirects.Site/appsettings.json
@@ -27,7 +27,9 @@
   },
   "SimpleRedirects": {
     "CacheEnabled": true,
-    "CacheDuration": 86400, 
-    "OnlyRedirectOn404": false
+    "CacheDuration": 86400,
+    "OnlyRedirectOn404": false,
+    "IgnoreQueryString": true,
+    "PreserveQueryString": true
   } 
 }
