Redirects CSV Export

--- a/source/SimpleRedirects.Site/appsettings.json
+++ b/source/SimpleRedirects.Site/appsettings.json
@@ -9,9 +9,6 @@
       }
     }
   },
-  "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=(localdb)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\Umbraco.mdf;Integrated Security=True"
-  },
   "Umbraco": {
     "CMS": {
       "Hosting": {
@@ -31,5 +28,9 @@
     "OnlyRedirectOn404": false,
     "IgnoreQueryString": true,
     "PreserveQueryString": true
-  } 
+  },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  }
 }
